exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for ABOUT 1`] = `
[
  234,
  273,
  300,
  348,
  412,
  468,
  546,
  600,
  636,
  696,
  702,
  819,
  860,
  900,
  922,
  1026,
  1084,
  1096,
  1272,
  1362,
  1720,
  2168
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for LOGO 1`] = `
[
  324,
  371,
  648,
  742,
  972,
  1113
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for PROJECT_DETAIL_FULL 1`] = `
[
  162,
  188,
  302,
  357,
  407,
  486,
  564,
  604,
  714,
  792,
  814,
  906,
  1071,
  1188,
  1221
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for PROJECT_DETAIL_HALF 1`] = `
[
  324,
  376,
  462,
  522,
  604,
  648,
  714,
  752,
  792,
  816,
  924,
  972,
  1006,
  1044,
  1128,
  1208,
  1262,
  1428,
  1582,
  1632,
  1884,
  2012,
  2524,
  3164
]
`;

exports[`Breakpoints from sizes and dimensions > should return expected breakpoints snapshot for PROJECT_LIST_ITEM 1`] = `
[
  162,
  188,
  302,
  357,
  409,
  486,
  538,
  564,
  622,
  664,
  714,
  792,
  835,
  906,
  1026,
  1076,
  1188,
  1244,
  1328,
  1670,
  2096
]
`;
